--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
+# Python
 .venv
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg-info/
+dist/
+build/
+
+# Environment and credentials
+.env
+
+# Generated reports
+schema_validation_report.json
+schema_validation_report.md
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
